# life-butler

./: .gitignore  API.md  Cargo.toml  Dockerfile  README.md  cargo-watch-src.sh  cargo-watch-test.sh
.github/workflows/: main.yml  rust.yml
idea_api/: create_event.http  create_task.http  register.http  sleep_request.http
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/dto/: event_dto.rs  mod.rs  task_dto.rs  user_dto.rs  user_routine_dto.rs
src/application/use_case/: mod.rs
src/application/use_case/event/: create_event.rs  mod.rs
src/application/use_case/event/commands/: mod.rs
src/application/use_case/event/queries/: mod.rs
src/application/use_case/user/: delete_email_user.rs  mod.rs  register_user.rs  user_login.rs
src/database/: data_base_service.rs  mod.rs
src/driver/: bootstrap.rs  mod.rs  swagger.rs
src/driver/model/: create_event.rs  mod.rs  register_user.rs  user_login.rs
src/driver/models/: create_event.rs  mod.rs  register_user.rs  response.rs  user_login.rs
src/driver/module/: mod.rs
src/driver/routes/: event_routes.rs  mod.rs  routine_routes.rs  task_routes.rs  user_routes.rs
src/infrastructure/: mod.rs  modules.rs
src/infrastructure/database/: database_service.rs  mod.rs
src/infrastructure/database/entities/: event.rs  mod.rs  routine.rs  task.rs  user.rs
src/infrastructure/error/: mod.rs
src/infrastructure/repositories/: mod.rs
src/infrastructure/repositories/event/: find_expired_events.rs  find_recent_events.rs  insert_event.rs  mod.rs
src/infrastructure/repositories/task/: find_user_tasks.rs  insert_task.rs  mod.rs  update_task_status.rs
src/infrastructure/repositories/user/: create_user.rs  delete_email_user.rs  find_email_user.rs  find_id_user.rs  insert_user.rs  mod.rs  user_login.rs  user_repository.rs
src/infrastructure/results/: create_result.rs  delete_result.rs  insert_result.rs  login_result.rs  mod.rs
src/shared/utils/: date_time.rs
test/: Cargo.toml
test/src/: lib.rs
test/src/binary/: mod.rs  user.rs
tests/: api_tests.rs  auth_test.rs  binary_tests.rs  user.rs
tests/api/: mod.rs  user.rs
tests/binary/: mod.rs  user.rs
tests/binary/common/: mod.rs
tests/common/: mod.rs
(+35 files in other folders)
