[package]
name = "life-butler"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = { version = "0.6.18", features = ["multipart", "tracing"] }
error-stack = "0.3.1"
futures = "0.3.28"
hyper = { version = "0.14.26", features = ["full"] }
mongodb = { version = "2.5.0"}
serde = "1.0.163"
serde_json = "1.0.96"
serde_with = "3.0.0"
tokio = { version = "1.28.2", features = ["full"] }
tokio-http = "0.0.0"
tower-cookies = "0.9.0"
tower-http = "0.4.0"
tracing = "0.1.37"
uuid = "1.3.3"


[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
