[package]
name = "life-butler"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { version = "0.6.18", features = ["multipart", "tracing"] }
bson = "2.6.1"
chrono = { version = "0.4.26", features = ["serde"] }
error-stack = "0.3.1"
futures = "0.3.28"
hyper = { version = "0.14.26", features = ["full"] }
mongodb = { version = "2.5.0", features = ["bson-chrono-0_4"] }
once_cell = "1.18.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.163"
serde_json = "1.0.96"
serde_with = "3.0.0"
tokio = { version = "1.28.2", features = ["full"] }
tokio-http = "0.0.0"
tower-cookies = "0.9.0"
tower-http = { version = "0.4.0", features = ["tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
utoipa = { version = "3.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
uuid = "1.3.3"


[dev-dependencies]
reqwest = "0.11.18"
tower = { version = "0.4.13", features = ["util"] }
