[package]
name = "life-butler-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = "0.3.1"
futures = "0.3.28"
life-butler = { path = ".." }
mongodb = "2.5.0"
once_cell = "1.17.2"
tokio = { version = "1.28.2", features = ["full"] }
